tests/fixtures/errors/use_after_move.z
# E0200: use of an owned value after it was moved by a bare binding.
main: function is {
    a: "hello".string
    b: a
    c: a
}
